tests/nested-overflow.chg
fn main() {
  let x = bitcast(0);
  x = bitcast(1);
}
